testData/highlighting/redeclaredImportAsFunction.go
package demo

import <error descr="Unused import">"fmt"</error>

func <error descr="import \"fmt\" redeclared in this block">fmt</error>() {}

